--- a/index.html
+++ b/index.html
@@ -2,24 +2,81 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Ôn tập Hán 1</title>
+  <title>Luyện nghe tiếng Trung</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
-    body { font-family: sans-serif; text-align: center; padding: 50px; background: #f9f9f9; }
-    h1 { margin-bottom: 30px; }
-    .menu { display: flex; flex-direction: column; align-items: center; gap: 20px; }
-    a {
-      display: block;
-      padding: 15px 30px;
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 10px;
+      text-align: center;
+      background: #f9f9f9;
+    }
+
+    h1 {
+      font-size: 6vw;
+      margin: 10px 0 5px;
+    }
+
+    .range {
+      font-size: 4vw;
+      margin-bottom: 10px;
+    }
+
+    .current {
+      font-size: 4.5vw;
+      margin: 10px 0;
+    }
+
+    .controls, .info {
+      margin: 15px auto;
+      width: 95%;
+      max-width: 600px;
+    }
+
+    audio {
+      width: 100%;
+      margin: 10px 0;
+    }
+
+    button, select, input {
+      font-size: 4.5vw;
+      padding: 10px 15px;
+      border-radius: 8px;
+      border: none;
+    }
+
+    button {
       background: #4CAF50;
       color: white;
-      text-decoration: none;
-      border-radius: 10px;
-      font-size: 20px;
-      transition: background 0.3s;
-      width: 250px;
-      text-align: center;
+      margin: 5px;
     }
-    a:hover { background: #45a049; }
+
+    button:hover {
+      background: #45a049;
+    }
+
+    .hanzi {
+      font-family: SimSun, "Noto Serif SC", serif;
+      font-size: 6vw;
+      margin: 10px 0;
+    }
+
+    .pinyin, .vietnamese {
+      font-size: 4.5vw;
+      margin: 5px 0;
+    }
+
+    .card {
+      background: white;
+      border-radius: 10px;
+      padding: 15px;
+      margin: 15px auto;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      width: 95%;
+      max-width: 600px;
+    }
   </style>
 </head>
 <body>
