--- a/index1.html
+++ b/index1.html
@@ -3,22 +3,82 @@
 <head>
   <meta charset="UTF-8">
   <title>Luyện nghe tiếng Trung</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
-    body { font-family: sans-serif; text-align: center; padding: 20px; }
-    .subtitle { font-size: 16px; color: #666; margin-top: -10px; }
-    .status-line { margin: 10px 0; font-weight: bold; }
-    .card { border: 1px solid #ccc; border-radius: 12px; padding: 20px; margin: 20px auto; max-width: 600px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);}
-    .section-title { font-weight: bold; margin-top: 15px; margin-bottom: 5px; }
-    .hanzi, .answer-hanzi { font-family: "SimSun", serif; font-size: 28px; margin: 5px 0; }
-    .pinyin, .answer-pinyin { color: #0066cc; margin: 5px 0; font-size: 18px; }
-    .meaning { color: #444; margin: 5px 0; font-size: 18px; }
-    .hidden { display: none; }
-    .controls { margin: 15px 0; }
-    button { padding: 10px 20px; margin: 5px; border-radius: 8px; border: none; background: #4CAF50; color: white; font-size: 16px; cursor: pointer; }
-    input[type="number"] { width: 100px; padding: 8px; font-size: 16px; margin: 0 5px; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 10px;
+      text-align: center;
+      background: #f9f9f9;
+    }
+
+    h1 {
+      font-size: 6vw;
+      margin: 10px 0 5px;
+    }
+
+    .range {
+      font-size: 4vw;
+      margin-bottom: 10px;
+    }
+
+    .current {
+      font-size: 4.5vw;
+      margin: 10px 0;
+    }
+
+    .controls, .info {
+      margin: 15px auto;
+      width: 95%;
+      max-width: 600px;
+    }
+
+    audio {
+      width: 100%;
+      margin: 10px 0;
+    }
+
+    button, select, input {
+      font-size: 4.5vw;
+      padding: 10px 15px;
+      border-radius: 8px;
+      border: none;
+    }
+
+    button {
+      background: #4CAF50;
+      color: white;
+      margin: 5px;
+    }
+
+    button:hover {
+      background: #45a049;
+    }
+
+    .hanzi {
+      font-family: SimSun, "Noto Serif SC", serif;
+      font-size: 6vw;
+      margin: 10px 0;
+    }
+
+    .pinyin, .vietnamese {
+      font-size: 4.5vw;
+      margin: 5px 0;
+    }
+
+    .card {
+      background: white;
+      border-radius: 10px;
+      padding: 15px;
+      margin: 15px auto;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      width: 95%;
+      max-width: 600px;
+    }
   </style>
-</head>
-<body>
+</head><body>
   <h2>Luyện nghe câu hỏi Ôn tập Hán 1: bài 1-6</h2>
   <div class="subtitle">Từ 1 đến 72</div>
 
