--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Luyện Nghe Tiếng Trung (Hán Ngữ)</h1>
+    <h1>Luyện Nghe Tiếng Trung (Tiếng Trung Thanh Hằng)</h1>
     
     <div class="main-layout">
       <nav class="main-menu">
