--- a/index1.html
+++ b/index1.html
@@ -175,7 +175,7 @@
     }
 
     .hanzi { 
-        font-family: 'Noto Serif SC', "SimSun", serif; 
+        font-family: 'SimSun', 'Noto Sans SC', sans-serif;
         font-size: 3rem; 
         margin: 10px 0; 
         font-weight: 700;
@@ -202,7 +202,7 @@
         padding-top: 15px;
     }
     .answer-hanzi { 
-        font-family: 'Noto Serif SC', "SimSun", serif; 
+        font-family: 'SimSun', 'Noto Sans SC', sans-serif;
         font-size: 2.5rem;
         margin: 10px 0; 
         font-weight: 700;
