--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Trang Chủ - Luyện Nghe Tiếng Trung</title>
+  <title>Tổng hợp kiến thức Tiếng Trung</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
@@ -198,7 +198,7 @@
       <main class="content-area">
         
         <div id="han1-content" class="content-tab active-content">
-          <h2>Hán 1 - Ôn tập Nghe Câu Hỏi</h2>
+          <h2>Hán 1 - Ôn tập kiến thức HSK 1</h2>
           <div class="submenu-grid">
             
             <a href="index1.html" class="submenu-item">
@@ -287,4 +287,5 @@
     });
   </script>
 </body>
+
 </html>
