--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
                   Bài 16: 你常去图书馆吗? Bạn có thường xuyên đến thư viện không
                   <span class="subtitle">Click để học</span>
                 </a>
-                <a href="index2B17.html" class="submenu-item disabled">
+                <a href="index2B17.html" class="submenu-item">
                   Bài 17: 他做什么呢? Bạn ấy đang làm gì đấy
-                  <span class="subtitle">Đang cập nhật...</span>
+                  <span class="subtitle">Click để học</span>
                 </a>
                 <a href="index2B18.html" class="submenu-item disabled">
                   Bài 18: 我去邮局寄包裹 Tôi đi bưu điện gửi bưu phẩm
@@ -475,4 +475,5 @@
     });
   </script>
 </body>
+
 </html>
