--- a/index.html
+++ b/index.html
@@ -314,9 +314,9 @@
                   Bài 17: 他做什么呢? Bạn ấy đang làm gì đấy
                   <span class="subtitle">Click để học</span>
                 </a>
-                <a href="index2B18.html" class="submenu-item disabled">
+                <a href="index2B18.html" class="submenu-item">
                   Bài 18: 我去邮局寄包裹 Tôi đi bưu điện gửi bưu phẩm
-                  <span class="subtitle">Đang cập nhật...</span>
+                  <span class="subtitle">Click để học</span>
                 </a>
                 <a href="index2B19.html" class="submenu-item disabled">
                   Bài 19: 可以试试吗? Có thể thử được không
@@ -477,3 +477,4 @@
 </body>
 
 </html>
+
