--- a/index.html
+++ b/index.html
@@ -318,53 +318,53 @@
                   Bài 18: 我去邮局寄包裹 Tôi đi bưu điện gửi bưu phẩm
                   <span class="subtitle">Click để học</span>
                 </a>
-                <a href="index2B19.html" class="submenu-item disabled">
+                <a href="index2B19.html" class="submenu-item">
                   Bài 19: 可以试试吗? Có thể thử được không
-                  <span class="subtitle">Đang cập nhật...</span>
+                  <span class="subtitle">Click để học</span>
                 </a>
                 <a href="index2B20.html" class="submenu-item disabled">
                   Bài 20: 祝你生日快乐 Chúc bạn sinh nhật vui vẻ
-                  <span class="subtitle">Đang cập nhật...</span>
+                  <span class="subtitle">Click để học</span>
                 </a>
                 <a href="index2B21.html" class="submenu-item disabled">
                   Bài 21: 我们明天7点15一刻出发 Ngày mai chúng ta xuất phát lúc 7h15
-                  <span class="subtitle">Đang cập nhật...</span>
+                  <span class="subtitle">Click để học</span>
                 </a>
                 <a href="index2B22.html" class="submenu-item disabled">
                   Bài 22: 我打算请老师教我京剧 Tôi định mời giáo viên dạy tôi kinh kịch
-                  <span class="subtitle">Đang cập nhật...</span>
+                  <span class="subtitle">Click để học</span>
                 </a>
                 <a href="index2B23.html" class="submenu-item disabled">
                   Bài 23: 学校里有邮局吗？Trong trường có bưu điện không
-                  <span class="subtitle">Đang cập nhật...</span>
+                  <span class="subtitle">Click để học</span>
                 </a>
                 <a href="index2B24.html" class="submenu-item disabled">
                   Bài 24: 我想学太极拳 Tôi muốn học thái cực quyền
-                  <span class="subtitle">Đang cập nhật...</span>
+                  <span class="subtitle">Click để học</span>
                 </a>
                 <a href="index2B25.html" class="submenu-item disabled">
                   Bài 25: 她学得很好 Cô ấy học rất giỏi
-                  <span class="subtitle">Đang cập nhật...</span>
+                  <span class="subtitle">Click để học</span>
                 </a>
                 <a href="index2B26.html" class="submenu-item disabled">
                   Bài 26: 田芳去哪儿了 Điền Phương đi đâu rồi·
-                  <span class="subtitle">Đang cập nhật...</span>
+                  <span class="subtitle">Click để học</span>
                 </a>
                 <a href="index2B27.html" class="submenu-item disabled">
                   Bài 27: 玛丽哭了 Mari khóc rồi
-                  <span class="subtitle">Đang cập nhật...</span>
+                  <span class="subtitle">Click để học</span>
                 </a>
                 <a href="index2B28.html" class="submenu-item disabled">
                   Bài 28: 我吃了早饭就来了 Tôi ăn sáng xong rồi đến ngay
-                  <span class="subtitle">Đang cập nhật...</span>
+                  <span class="subtitle">Click để học</span>
                 </a>
                 <a href="index2B29.html" class="submenu-item disabled">
                   Bài 29: 我都做对了 Tôi làm đúng hết rồi
-                  <span class="subtitle">Đang cập nhật...</span>
+                  <span class="subtitle">Click để học</span>
                 </a>
                 <a href="index2B30.html" class="submenu-item disabled">
                   Bài 30: 我来了两个多月了 Tôi đã đến được hơn hai tháng rồi
-                  <span class="subtitle">Đang cập nhật...</span>
+                 <span class="subtitle">Click để học</span>
                 </a>
               </div>
           </div>
@@ -477,4 +477,5 @@
 </body>
 
 </html>
+
 
